--- a/src/frontend/src/components/menu/index.scss
+++ b/src/frontend/src/components/menu/index.scss
@@ -3,13 +3,13 @@
     position: absolute;
     left: 0;
     top : 0;
-    width: 8vw;
+    width: 10vw;
     height: 100vh;
     background: hsl(0, 0%, 11%);
     display: flex;
     flex-direction: column;
 
-    button {
+    .button {
         background-color: hsl(0, 0%, 12%);
         color: hsl(240, 80%, 70%);
         border: none;
@@ -19,7 +19,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        
+        text-decoration: none;
 
         &:hover {
             background-color: hsl(0, 0%, 17%);
