ajout/modification/suppression utilisateur

--- a/src/frontend/src/components/users/index.scss
+++ b/src/frontend/src/components/users/index.scss
@@ -1,11 +1,9 @@
-.table-wrapper {
-    position: absolute;
-    left: 10.005%;
-    height: 100vh;
-    width: 89.95vw;   
+.button-add {
+    position: relative;
+    right: 0;
 }
 
-.table {
-    font-size: 64px;
-    color: white
+.title {
+    display: inline;
+    color: rgb(14, 226, 14);
 }
